--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -7,6 +7,11 @@
     &__content {
         display: inline-block;
         width: 350px;
+
+        @include desktop() {
+            width: auto;
+            max-width: 300px;
+        }
     }
 
     &__article {
@@ -18,10 +23,20 @@
     margin-right: 30px;
     vertical-align: top;
 
+    @include desktop() {
+        margin-right: 5px;
+        margin-top: 5px;
+    }
+
     &__icon {
         width: 75px;
         height: 63px;
         fill: #ffffff;
         opacity: 0.05;
+
+        @include desktop() {
+            width: 30px;
+            height: 25px;
+        }
     }
 }
