--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -3,12 +3,11 @@
 
     &__list {
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        text-align: left;
     }
     &__item {
         display: inline-block;
+        margin: 0 0 10px 50px;
     }
     &__link {
         color: #fff;
