--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -11,6 +11,11 @@
         margin-bottom: 30px;
         width: 126px;
         height: 126px;
+
+        @include tablets() {
+            width: 9rem;
+            height: 9rem;
+        }
     }
     &__name {
         text-align: center;
