--- a/src/styles/blocks/tags.pcss
+++ b/src/styles/blocks/tags.pcss
@@ -1,6 +1,10 @@
 .tags {
     padding-bottom: 40px;
 
+    @include desktop() {
+        padding-bottom: 10px;
+    }
+
     &__list {
         display: inline-block;
     }
