--- a/src/styles/sections/contact.pcss
+++ b/src/styles/sections/contact.pcss
@@ -4,5 +4,11 @@
         display: block;
         margin-top: 50px;
     }
+    
+    .title {
+        @include desktop() {
+            text-align: center;
+        }
+    }
         
 }
