--- a/src/sections/contact.pug
+++ b/src/sections/contact.pug
@@ -16,12 +16,12 @@ section.contact
                     label.form__label Введите выш email
                     input(type="text" name="email").form__input
         .form__block
-            .form__field
+            .form__field.form__field--message
                 .form__left.form__left--message
                     +icon('message', 'form__icon')
-                .form__right
+                .form__right.form__right--message
                     label.form__label Сообщение к письму
-                    textarea(name="message").form__input
+                    textarea(name="message").form__input.form__input--message
         .button-block
             button(type="submit" value="Отправить" form="message").button.button--send Отправить
 
