--- a/src/styles/blocks/container.pcss
+++ b/src/styles/blocks/container.pcss
@@ -22,12 +22,23 @@
         justify-content: space-between;
         flex-direction: row-reverse;
         padding: 65px 0;
+
+        @include tablets() {
+            flex-direction: column;
+            align-items: flex-start;
+            padding: bottom;
+            display: block;
+        }
     }
 
     &__works {
         align-items: flex-start;
         justify-content: space-between;
         padding-bottom: 150px;
+
+        @include desktop() {
+            flex-direction: column;
+        }
 
         &--title {
             padding-top: 90px;
@@ -37,5 +48,13 @@
 
     &__bottom {
         flex-direction: column;
+    }
+
+    &__footer {
+        /* text-align: left; */
+        padding-top: 85px;
+        padding-bottom: 100px;
+        align-items: flex-start;
+        justify-content: space-between;
     }
 }
