--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -2,20 +2,42 @@
     &__block {
         display: block;
         margin-bottom: 40px;
+
+        @include desktop() {
+            text-align: center;
+        }
     }
     &__field {
         border-bottom: 2px solid #fff;
         display: inline-block;
         margin-right: 50px;
-        width: 410px;
+        width: 40%;
         vertical-align: top;
+
+        @include desktop() {
+            text-align: left;
+        }
+
+        &--message {
+            @include desktop() {
+                width: 86%;
+            }
+        }
     }
     &__left, &__right {
         display: inline-block;
-
+    }
+    &__left {
         &--message {
             padding-top: 50px;
             vertical-align: top;
+        }
+    }
+    &__right {
+        width: 80%;
+
+        &--message {
+            width: 90%;
         }
     }
     &__label {
@@ -31,7 +53,7 @@
         border: none;
         outline: none;
         display: block;
-        width: 360px;
+        width: 100%;
         color: #fff;
         font-size: 18px;
         font-weight: 700;
