--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -26,7 +26,7 @@
                 bottom: 0;
                 height: 250px;
                 width: 100%;
-                background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,0.8) 40%, rgba(0,0,0,0) 100%);
+                background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,.99) 10%, rgba(27,31,34,.97) 20%, rgba(27,31,34,.94) 30%, rgba(27,31,34,.90) 40%, rgba(27,31,34,.85) 50%, rgba(27,31,34,.79) 60%, rgba(27,31,34,.72) 70%, rgba(0,0,0,0) 100%);
             }
         }
     }
