--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -54,7 +54,8 @@
         }
 
         &--circle {
-            margin-right: 20px;
+            margin-left: 0;
+            margin-right: 40px;
             width: 50px;
             height: 50px;
             display: block;
