--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -6,6 +6,11 @@
         height: 200px;
         border-radius: 50%;
         margin-bottom: 70px;
+
+        @include tablets() {
+            width: 170px;
+            height: 170px;
+        }
     }
 }
 .user-info {
@@ -17,6 +22,10 @@
         line-height: 30px;
         min-width: 170px;
         display: inline-block;
+
+        @include tablets() {
+            min-width: 100px;
+        }
     }
     &__data {
         color: #fff;
