--- a/src/styles/sections/skills.pcss
+++ b/src/styles/sections/skills.pcss
@@ -3,9 +3,27 @@
     background-size: cover;
     width: 100vw;
     position: relative;
+    overflow: hidden;
 
     &__left {
         width: 33%;
+        
+        @include tablets() {
+            width: 100%;
+            transform: rotate(-90deg);
+            margin: 0;
+            margin-top: -200px;
+            margin-bottom: -60px;
+        
+        }
+    }
+    &__right {
+        @include desktop() {
+            width: 45%;
+        }
+        @include tablets() {
+            width: 100%;
+        }
     }
 
     &__content {
@@ -17,5 +35,15 @@
         left: 0;
         bottom: -50px;
         max-width: 45%;
+
+        @include tablets() {
+            position: relative;
+            display: block;
+            margin: 0;
+            width: 66%;
+            left: auto;
+            max-width: 100%;
+            bottom: 0;
+        }
     }
 }
