Added hamburger mixins, made header navigation as Vue template

--- a/src/sections/header.pug
+++ b/src/sections/header.pug
@@ -2,15 +2,14 @@ include ../mixins
 
 header.header
     .logo SD
-    +nav('nav', ['Главная',
-        'Обо мне',
-        'Навыки',
-        'Работы',
-        'Отзывы',
-        'Связаться'], 3)
+    
+    #navigation-component
+
     .socials
         ul.socials__list
             each social in ['insta', 'vk', 'github']
                 li.socials__item
                     a(href="#").socials__link
                         +icon(`${social}`, `${social} socials__icon`)
+
+    #nav-button
