Made hamburger menu

--- a/src/styles/blocks/_hamburgers.pcss
+++ b/src/styles/blocks/_hamburgers.pcss
@@ -5,8 +5,8 @@
 $hamburger-padding-x           : 15px !default;
 $hamburger-padding-y           : 15px !default;
 $hamburger-layer-width         : 30px !default;
-$hamburger-layer-height        : 4px !default;
-$hamburger-layer-spacing       : 5px !default;
+$hamburger-layer-height        : .26rem !default;
+$hamburger-layer-spacing       : .31rem !default;
 $hamburger-layer-color         : #fff !default;
 $hamburger-layer-border-radius : 4px !default;
 $hamburger-hover-opacity       : 0.7 !default;
