--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,6 +1,119 @@
 .nav {
     width: 690px;
 
+    @include tablets() {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        left: 0;
+        top: -100%;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        background: rgba(0, 0, 0, .3);
+        transition: ease-in-out .2s;
+
+        &__list {
+            width: auto !important;
+        }
+        &__item {
+            width: 100%;
+            text-align: center;
+            margin: 0 !important;
+            border-top: 3px solid #f29400;
+            background: rgba(0, 0, 0, .7);
+            display: block !important;
+            opacity: 0;
+            transform: translateY(-100%);
+            transition: ease-in-out .2s;
+
+            &:last-child {
+                border-bottom: 3px solid #f29400;
+            }
+        }
+        &__link {
+            font-size: 36px;
+            font-weight: 900 !important;
+            padding: 35px 120px;
+            display: block;
+        }
+
+        &:before {
+            content: "";
+            position: absolute;
+            left: -100%;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            background: rgba(0, 0, 0, .6);
+            opacity: 0;
+            transition: .2s ease-in-out .2s;
+            z-index: -1;
+        }
+        &:after {
+            content: "";
+            position: absolute;
+            right: -100%;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            background: rgba(0, 0, 0, .6);
+            opacity: 0;
+            transition: .2s ease-in-out .2s;
+            z-index: -1;
+        }
+
+        &.is-active {
+            top: 0;
+            opacity: 1;
+            
+
+            .nav__item {
+                &:first-child {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .2s ease-in-out .3s;
+                }
+                &:nth-child(2) {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .3s ease-in-out .3s;
+                }
+                &:nth-child(3) {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .4s ease-in-out .3s;
+                }
+                &:nth-child(4) {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .5s ease-in-out .3s;
+                }
+                &:nth-child(5) {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .6s ease-in-out .3s;
+                }
+                &:nth-child(6) {
+                    opacity: 1;
+                    transform: translateY(0);
+                    transition: .7s ease-in-out .3s;
+                }
+                
+            }
+
+            &:before {
+                left: 0;
+                opacity: 1;
+            }
+            &:after {
+                right: 0;
+                opacity: 1;
+            }
+        }
+    }
+
     &__list {
         width: 100%;
         text-align: left;
@@ -8,6 +121,10 @@
     &__item {
         display: inline-block;
         margin: 0 0 10px 50px;
+
+        @include desktop() {
+            margin-left: 20px;
+        }
     }
     &__link {
         color: #fff;
