--- a/src/sections/hero.pug
+++ b/src/sections/hero.pug
@@ -2,7 +2,7 @@ section.hero.parallax__layer
     .container.container__hero
         include header
 
-        //- h1.hero-title.hero-title--parallax
+        //- h1.hero-title.hero-title--tablet
         //-     .hero-title__info Личный сайт веб разработчика
         //-     .hero-title__name Сергей Дмитриев
 
