--- a/src/sections/reviews.pug
+++ b/src/sections/reviews.pug
@@ -11,7 +11,7 @@ section.reviews
                 +icon('arrow-right', 'button__arrow')
             button.button.reviews__button.button--circle
                 +icon('arrow-right', 'button__arrow button__arrow--left')
-    .feedback
+    .feedback.active
         .quotes
             +icon('quote', 'quotes__icon')
         .feedback__content
