--- a/src/styles/blocks/button.pcss
+++ b/src/styles/blocks/button.pcss
@@ -49,6 +49,10 @@
         @include desktop() {
             margin: 0 auto;
         }
+        @include phones() {
+            padding: 20px 0;
+            width: 100%;
+        }
 
         &:before {
             content: "Отправить";
