--- a/src/styles/blocks/logo.pcss
+++ b/src/styles/blocks/logo.pcss
@@ -5,4 +5,11 @@
     font-weight: 900;
     line-height: 30px;
     display: inline-block;
+
+    /* @include tablets() {
+        line-height: 25px;
+    }
+    @include phones() {
+        line-height: 20px;
+    } */
 }
