--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -16,6 +16,14 @@
             width: 9rem;
             height: 9rem;
         }
+        @include phones() {
+            margin-right: 20px;
+            margin-bottom: 20px;
+
+            &:nth-child(even) {
+                margin-right: 0;
+            }
+        }
     }
     &__name {
         text-align: center;
