--- a/src/index.pug
+++ b/src/index.pug
@@ -20,6 +20,9 @@ body
                     .hero-title__name Сергей Дмитриев
             .parallax__layer
                 +image('parallax/layer-03.png', 'parallax__image')
+                h1.hero-title.hero-title--tablet
+                    .hero-title__info Личный сайт веб разработчика
+                    .hero-title__name Сергей Дмитриев
             .parallax__layer
                 +image('parallax/layer-04.png', 'parallax__image')
             include ./sections/hero.pug
