--- a/src/styles/blocks/copyright.pcss
+++ b/src/styles/blocks/copyright.pcss
@@ -5,7 +5,11 @@
     font-weight: 600;
     line-height: 30px;
     display: inline-block;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     vertical-align: top;
     margin-top: 10px;
+
+    @include tablets() {
+        width: 100%;
+    }
 }
