--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -12,10 +12,22 @@
             width: auto;
             max-width: 300px;
         }
+        @include phones() {
+            max-width: 100%;
+        }
     }
 
     &__article {
         margin-bottom: 30px;
+    }
+
+    @include phones() {
+        margin: 0;
+        display: none;
+        
+        &.active {
+            display: block;
+        }
     }
 }
 .quotes {
@@ -26,6 +38,10 @@
     @include desktop() {
         margin-right: 5px;
         margin-top: 5px;
+    }
+
+    @include phones() {
+        display: none;
     }
 
     &__icon {
