--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -3,16 +3,17 @@
 
     @include tablets() {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         position: fixed;
-        left: 0;
-        top: -100%;
+        right: -100%;
+        top: 0;
         width: 100%;
         height: 100%;
         opacity: 0;
         background: rgba(0, 0, 0, .3);
-        transition: ease-in-out .2s;
+        transition: ease-in-out .4s;
+        overflow: hidden;
 
         &__list {
             width: auto !important;
@@ -22,19 +23,24 @@
             text-align: center;
             margin: 0 !important;
             border-top: 3px solid #f29400;
-            background: rgba(0, 0, 0, .7);
+            background: linear-gradient(to right, rgba(234, 116, 0, .7) 0%, rgba(242, 148, 0, 1) 100%);
             display: block !important;
             opacity: 0;
-            transform: translateY(-100%);
-            transition: ease-in-out .2s;
+            transform: translateX(-50%);
+            transition: .4s ease-in-out .3s;
+
+            &:first-child {
+                border-top: none;
+            }
 
             &:last-child {
                 border-bottom: 3px solid #f29400;
             }
         }
         &__link {
-            font-size: 36px;
-            font-weight: 900 !important;
+            font-size: 18px;
+            font-weight: 700 !important;
+            text-transform: uppercase;
             padding: 35px 120px;
             display: block;
         }
@@ -42,75 +48,81 @@
         &:before {
             content: "";
             position: absolute;
-            left: -100%;
-            top: 0;
-            width: 50%;
-            height: 100%;
-            background: rgba(0, 0, 0, .6);
+            left: 0;
+            top: -100%;
+            width: 100%;
+            height: 50%;
+            background: rgba(242, 148, 0, .6);
             opacity: 0;
-            transition: .2s ease-in-out .2s;
+            transition: .4s ease-in-out .5s;
             z-index: -1;
         }
         &:after {
             content: "";
             position: absolute;
-            right: -100%;
-            top: 0;
-            width: 50%;
-            height: 100%;
-            background: rgba(0, 0, 0, .6);
+            right: 0;
+            bottom: -100%;
+            width: 100%;
+            height: 50%;
+            background: rgba(242, 148, 0, .6);
             opacity: 0;
-            transition: .2s ease-in-out .2s;
+            transition: .4s ease-in-out .5s;
             z-index: -1;
         }
 
         &.is-active {
-            top: 0;
+            right: 0;
             opacity: 1;
             
 
             .nav__item {
                 &:first-child {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .2s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: .5s ease-in-out .3s;
                 }
                 &:nth-child(2) {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .3s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: .65s ease-in-out .3s;
                 }
                 &:nth-child(3) {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .4s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: .8s ease-in-out .3s;
                 }
                 &:nth-child(4) {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .5s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: .95s ease-in-out .3s;
                 }
                 &:nth-child(5) {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .6s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: 1.1s ease-in-out .3s;
                 }
                 &:nth-child(6) {
                     opacity: 1;
-                    transform: translateY(0);
-                    transition: .7s ease-in-out .3s;
+                    transform: translateX(0);
+                    transition: 1.25s ease-in-out .3s;
                 }
                 
             }
 
             &:before {
-                left: 0;
+                top: 0;
                 opacity: 1;
             }
             &:after {
-                right: 0;
+                bottom: 0;
                 opacity: 1;
             }
+        }
+    }
+
+    @include phones() {
+        &__link {
+            padding: 20px 80px;
         }
     }
 
