--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -11,6 +11,9 @@
             width: 170px;
             height: 170px;
         }
+        @include phones() {
+            margin: 0 auto 25px;
+        }
     }
 }
 .user-info {
@@ -32,5 +35,8 @@
         font-weight: 600;
         line-height: 30px;
         display: inline-block;
+    }
+    @include phones() {
+        margin: 0 auto 50px;
     }
 }
