--- a/src/styles/sections/footer.pcss
+++ b/src/styles/sections/footer.pcss
@@ -4,10 +4,19 @@
 
     &__left {
         width: 30%;
+
+        @include tablets() {
+            width: 100%;
+            margin-bottom: 30px;
+        }
     }
     &__right {
         width: 65%;
         max-width: 1000px;
+
+        @include tablets() {
+            width: 100%;
+        }
     }
     &__hero-title {
         width: 170px;
@@ -27,6 +36,11 @@
         opacity: 0.15;
         text-align: left;
         min-width: auto;
+
+        @include tablets() {
+            margin: 0;
+            width: 100%;
+        }
     }
 
     &__nav {
