--- a/src/styles/sections/reviews.pcss
+++ b/src/styles/sections/reviews.pcss
@@ -4,17 +4,34 @@
     &__top-block {
         display: block;
         padding-bottom: 90px;
+
+        @include phones() {
+            padding-bottom: 25px;
+        }
     }
     &__title {
         margin-right: 100px;
         display: inline-block;
         vertical-align: top;
+
+        @include phones() {
+            display: block;
+            margin: 0;
+        }
     }
     &__buttons {
         display: inline-block;
+
+        @include phones() {
+            display: block;
+            text-align: center;
+        }
     }
     .button {
         display: inline-block;
         margin-right: 20px;
+    }
+    @include phones() {
+        padding-bottom: 100px;
     }
 }
