--- a/src/styles/sections/wrapper-bottom.pcss
+++ b/src/styles/sections/wrapper-bottom.pcss
@@ -8,15 +8,14 @@
     align-items: flex-start;
     position: relative;
 
-    &_leaf {
+    &__left {
+        max-width: 1100px;
+    }
+    &__right {
         position: absolute;
-        top: -160px;
-        right: -215px;
-        width: 616px;
-        height: 442px;
-
-        @include desktop() {
-            right: -400px;
-        }
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
     }
 }
