Added slider to reviews block. Started working on slider in works block

--- a/src/sections/reviews.pug
+++ b/src/sections/reviews.pug
@@ -1,35 +1,3 @@
 section.reviews
-    .reviews__top-block 
-        h2.title.reviews__title.title--big Что обо мне говорят
-        //- .reviews__arrows
-        //-     .reviews__arrows_left.reviews__arrows__circle
-        //-         +icon('arrow-right', 'reviews__arrows__circle_icon')
-        //-     .reviews__arrows_right.reviews__arrows__circle
-        //-         +icon('arrow-right', 'reviews__arrows__circle_icon')
-        .reviews__buttons
-            button.button.reviews__button.button--circle
-                +icon('arrow-right', 'button__arrow')
-            button.button.reviews__button.button--circle
-                +icon('arrow-right', 'button__arrow button__arrow--left')
-    .feedback.active
-        .quotes
-            +icon('quote', 'quotes__icon')
-        .feedback__content
-            article.content.feedback__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
-            .person
-                .person__left
-                    +image('content/user.jpg', 'person__avatar')
-                .person__right
-                    .person__name Ковальчук Дмитрий
-                    .person__occ Основатель Loftschool
-    .feedback
-        .quotes
-            +icon('quote', 'quotes__icon')
-        .feedback__content
-            article.content.feedback__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
-            .person
-                .person__left
-                    +image('content/user.jpg', 'person__avatar')
-                .person__right
-                    .person__name Владимир Сабанцев
-                    .person__occ Предприниматель
+    #reviews-component
+    #feedbacks-component
