--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -33,10 +33,9 @@
         
     }
     &__slider {
-        padding: 60px;
-        padding-right: 0;
-        bottom: 0;
-        height: 220px;
+        bottom: 60px;
+        height: 100px;
+        width: 640px;
         overflow: hidden;
         position: absolute;
         z-index: 2;
@@ -70,5 +69,11 @@
         @include phones() {
             display: none;
         }
+    }
+    .flickity-enabled {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        bottom: 0;
     }
 }
