--- a/src/styles/sections/works.pcss
+++ b/src/styles/sections/works.pcss
@@ -38,4 +38,11 @@
             
         }
     }
+
+    .flickity-button {
+        display: none;
+    }
+    .flickity-page-dots {
+        display: none;
+    }
 }
