--- a/src/styles/sections/wrapper-bottom.pcss
+++ b/src/styles/sections/wrapper-bottom.pcss
@@ -10,6 +10,7 @@
 
     &__left {
         max-width: 1100px;
+        z-index: 10;
     }
     &__right {
         position: absolute;
@@ -17,5 +18,10 @@
         top: 0;
         width: 100%;
         height: 100%;
+        pointer-events: none;
+
+        @include tablets() {
+            display: none;
+        }
     }
 }
