--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -2,3 +2,4 @@ include ./components/skills.pug
 include ./components/works.pug
 include ./components/navigation.pug
 include ./components/message.pug
+include ./components/feedbacks.pug
