--- a/src/sections/header.pug
+++ b/src/sections/header.pug
@@ -4,12 +4,6 @@ header.header
     .logo SD
     
     #navigation-component
-
-    .socials
-        ul.socials__list
-            each social in ['insta', 'vk', 'github']
-                li.socials__item
-                    a(href="#").socials__link
-                        +icon(`${social}`, `${social} socials__icon`)
+    #socials-component
 
     #nav-button
