--- a/src/styles/blocks/logo.pcss
+++ b/src/styles/blocks/logo.pcss
@@ -3,7 +3,7 @@
     color: #fff;
     font-size: 36px;
     font-weight: 900;
-    line-height: 30px;
+    line-height: .6;
     display: inline-block;
 
     /* @include tablets() {
