--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,5 +1,5 @@
 .nav {
-    width: 690px;
+    /* width: 690px; */
 
     @include tablets() {
         display: flex;
@@ -11,31 +11,22 @@
         width: 100%;
         height: 100%;
         opacity: 0;
-        background: rgba(0, 0, 0, .3);
+        background: rgba(0, 0, 0, .9);
         transition: ease-in-out .4s;
         overflow: hidden;
+        z-index: 100;
 
         &__list {
             width: auto !important;
+            margin-top: 30px;
         }
         &__item {
             width: 100%;
-            text-align: center;
             margin: 0 !important;
-            border-top: 3px solid #f29400;
-            background: linear-gradient(to right, rgba(234, 116, 0, .7) 0%, rgba(242, 148, 0, 1) 100%);
             display: block !important;
             opacity: 0;
             transform: translateX(-50%);
             transition: .4s ease-in-out .3s;
-
-            &:first-child {
-                border-top: none;
-            }
-
-            &:last-child {
-                border-bottom: 3px solid #f29400;
-            }
         }
         &__link {
             font-size: 18px;
