--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -6,44 +6,20 @@
         align-items: center;
         justify-content: space-between;
 
-        .socials__icon {
-            fill: #fff;
-            transition: ease-in-out .2s;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .insta {
-            /* margin-left: 40px; */
-            width: 25px;
-        }
-        .vk {
-            /* margin-left: 40px; */
-            width: 31px;
-        }
-        .github {
-            /* margin-left: 40px; */
-            width: 27px;
-        }
-
         .socials__item {
             display: inline-block;
         }
         .socials__icon {
-            fill: #fff;
-            transition: ease-in-out .2s;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+            &:before {
+                color: #fff;
+                font-size: 30px
+            }
         }
     }
     &__link {
-        margin-left: 20px;
-        width: 50px;
-        height: 50px;
+        margin-left: 30px;
+        width: 30px;
+        height: 30px;
         display: block;
         position: relative;
         transition: ease-in-out .2s;
@@ -58,27 +34,29 @@
             margin-right: 40px;
             width: 50px;
             height: 50px;
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             position: relative;
             border: 1px solid #fff;
             border-radius: 50%;
             transition: ease-in-out .2s;
+            text-decoration: none;
 
-            .insta {
-                width: 20px;
-            }
-            .vk {
-                width: 25px;
-            }
-            .github {
-                width: 22px;
+            .socials__icon {
+                &:before {
+                    color: #fff;
+                    font-size: 25px;
+                }
             }
 
             &:hover {
                 border-color: #ff9a00;
 
                 .socials__icon {
-                    fill: #ff9a00;
+                    &:before {
+                        color: #ff9a00;
+                    }
                 }
             }
         }
