--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -1,6 +1,6 @@
 .parallax {
     background: rgba(27,31,34,1);
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -10,7 +10,7 @@
     perspective: 100px;
 
     &__layer {
-        position: absolute;
+        position: relative;
         top: 0;
         left: 0;
         width: 100%;
@@ -25,6 +25,12 @@
         object-fit: cover;
         object-position: center 30%;
     }
+    &:after {
+        content: "";
+        display: block;
+        height: 100vh;
+        width: 100%;
+    }
 }
 
 $layers: 5;
@@ -38,6 +44,33 @@ $layers: 5;
 
         transform: translateZ($perspective) scale($scale);
         z-index: $zIndex;
+        margin-top: -100vh;
+    }
+    .parallax__layer:nth-child(1) {
+        margin-top: 0;
+    }
+    .parallax__layer:last-child {
+        &:before {
+            content: "";
+            position: absolute;
+            z-index: 5;
+            left: 0;
+            bottom: 0;
+            height: 250px;
+            width: 100%;
+            background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,.99) 10%, rgba(27,31,34,.97) 20%, rgba(27,31,34,.94) 30%, rgba(27,31,34,.90) 40%, rgba(27,31,34,.85) 50%, rgba(27,31,34,.79) 60%, rgba(27,31,34,.72) 70%, rgba(0,0,0,0) 100%);
+
+        }
+        &:after {
+            content: "";
+            position: absolute;
+            z-index: 5;
+            left: 0;
+            bottom: -100%;
+            height: 100%;
+            width: 100%;
+            background: rgba(27,31,34,1);
+        }
     }
 }
 
@@ -56,10 +89,10 @@ $layers: 5;
 
 
 
-.maincontent {
+/* .maincontent {
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
     background: #fff;
-}
+} */
