--- a/src/styles/sections/hero.pcss
+++ b/src/styles/sections/hero.pcss
@@ -1,13 +1,6 @@
 .hero {
     width: 100vw;
-    &:after {
-        content: "";
-        position: absolute;
-        z-index: 5;
-        left: 0;
-        bottom: -5px;
-        height: 250px;
-        width: 100%;
-        background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,.99) 10%, rgba(27,31,34,.97) 20%, rgba(27,31,34,.94) 30%, rgba(27,31,34,.90) 40%, rgba(27,31,34,.85) 50%, rgba(27,31,34,.79) 60%, rgba(27,31,34,.72) 70%, rgba(0,0,0,0) 100%);
-    }
+    height: 100vh;
+    position: relative;
+    /* perspective: 100px; */
 }
