Parallax update. Mobile menu scrolling fix

--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -1,5 +1,5 @@
 .scroll {
-    z-index: 200;
+    z-index: 150;
 
     &__title {
         color: #fff;
@@ -19,7 +19,7 @@
         }
     }
 
-    @include phones() {
+    /* @include phones() {
         display: none;
-    }
+    } */
 }
