--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -1,5 +1,5 @@
 .parallax {
-    background: rgba(27,31,34,1);
+    
     position: absolute;
     top: 0;
     left: 0;
@@ -33,7 +33,7 @@
     }
 }
 
-$layers: 5;
+$layers: 6;
 
 @for $layerNum from $layers through 1 {
     .parallax__layer:nth-child(#{$layerNum}) {
@@ -61,7 +61,7 @@ $layers: 5;
             background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,.99) 10%, rgba(27,31,34,.97) 20%, rgba(27,31,34,.94) 30%, rgba(27,31,34,.90) 40%, rgba(27,31,34,.85) 50%, rgba(27,31,34,.79) 60%, rgba(27,31,34,.72) 70%, rgba(0,0,0,0) 100%);
 
         }
-        &:after {
+        /* &:after {
             content: "";
             position: absolute;
             z-index: 5;
@@ -70,7 +70,7 @@ $layers: 5;
             height: 100%;
             width: 100%;
             background: rgba(27,31,34,1);
-        }
+        } */
     }
 }
 
