--- a/src/styles/sections/hero.pcss
+++ b/src/styles/sections/hero.pcss
@@ -2,5 +2,33 @@
     width: 100vw;
     height: 100vh;
     position: relative;
-    /* perspective: 100px; */
+    background: #1a1f21;
+
+    &:before {
+        content: "SD";
+        opacity: 0.02;
+        font-size: 1280px;
+        font-weight: 900;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: -600px;
+        width: 2560px;
+        /* height: 100%; */
+        color: #fff;
+    }
+
+    @include tablets() {
+        &:before {
+            font-size: 640px;
+            bottom: -160px;
+        }
+    }
+    @include phones() {
+        &:before {
+            font-size: 480px;
+            bottom: -100px;
+        }
+    }
 }
