--- a/src/templates/components/navigation.pug
+++ b/src/templates/components/navigation.pug
@@ -1,8 +1,10 @@
 script(type="text/x-template")#navigation-block
-    nav.nav(:class="{'is-active': isActive}")#navigation
-        ul.nav__list
+    nav.nav(:class="{'is-active': open}")#navigation
+        ul.nav__list()
             li.nav__item(v-for="item in items")  
                 a.nav__link(:href='item.link') {{item.name}}
+                    .modal(v-if="open")
+                        .modal-points(v-scroll-lock="open")
 
 script(type="text/x-template")#socials-block
     .socials
@@ -12,6 +14,6 @@ script(type="text/x-template")#socials-block
                     i(:class="`fab fa-${social.name} socials__icon`")
 
 script(type="text/x-template")#nav-hamburger
-    button.hamburger.hamburger--elastic(type='button', aria-label='Menu', aria-controls='navigation' v-on:click="toggleActive" :class="{'is-active': isActive}")
+    button.hamburger.hamburger--elastic(type='button', aria-label='Menu', aria-controls='navigation' v-on:click="toggleActive" :class="{'is-active': open}")
         span.hamburger-box
             span.hamburger-inner
